Change img source nerdymanny to NerdyManny
Change img source nerdymanny to NerdyManny

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Images/nerdymanny.jpg" alt="Nerdy Manny" width="200" height="300"></td>
+      <td><img src="Images/NerdyManny.jpg" alt="Nerdy Manny" width="200" height="300"></td>
       <td><h1>Pablo Escobar</h1>
         I'm a Brazilian living in the USA. I enjoy my coffee in the morning, working out,
         meeting up with friends, <br>
