--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td><h1>Pablo Escobar</h1>
         I'm a Brazilian living in the USA. I enjoy my coffee in the morning, working out,
         meeting up with friends, <br>
-        sending memes and gifs,and doing all things that makes me blend in with my American friends!<br>
+        sending memes and gifs, and doing all things that makes me blend in with my American friends!<br>
         <br>
         <strong>#EpsteinDidntKillHimself</strong><br>
         <strong>#FreeMyBoyElChapo</strong><br>
@@ -64,7 +64,7 @@
   </tr>
   <tr>
     <td>Jan. 2018 - Oct. 2021</td>
-    <td>Fall River EMS</td>
+    <td>Paramedic at Fall River EMS</td>
   </tr>
     <tr>
       <td>Jun. 2012 - Apr. 2016</td>
